<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_main_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_notifications"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notificationsBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/notificationsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title_notifications"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/notificationsCheckbox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/notificationsCheckbox" />

        <ImageView
            android:id="@+id/notificationsCheckbox"
            android:layout_width="52dp"
            android:layout_height="32dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_checkbox_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.2"
        android:background="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.5"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/title_other"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/policyBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/policyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title_privacy_policy"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_settings_arrow"
            app:layout_constraintBottom_toBottomOf="@id/policyTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/policyTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.2"
        android:background="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/termsBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/termsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title_terms_of_use"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_settings_arrow"
            app:layout_constraintBottom_toBottomOf="@id/termsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/termsTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.2"
        android:background="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shareBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/shareTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/title_share_app"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_settings_arrow"
            app:layout_constraintBottom_toBottomOf="@id/shareTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/shareTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:alpha="0.2"
        android:background="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>